2007-10-03 [colin]	0.15.0cvs7

	* src/feed.c
		Fix warnings

2007-10-03 [colin]	0.15.0cvs6

	* configure.ac
		Fix missing type checks

2007-10-01 [ticho]	0.15.0cvs5

	* src/feed.c
	* src/feed.h
	* src/parsers.c
		Use feed link and id (or guid) fields better, with regards
		determining which one to use when. Fixes false new items for
		certain feeds who use unusual values for these fields.

2007-10-01 [ticho]	0.15.0cvs4

	* src/feed.c
	* src/parsers.c
		Do not mangle feed items' id and link after parsing. We'll
		decide later which one to use where.
		Use "id" and not "guid" for Atom feeds.

2007-09-28 [colin]	0.15.0cvs3

	* src/parsers.c
		Fix warnings

2007-09-23 [ticho]	0.15.0cvs2

	* src/rssyl_cb_gtk.c
		Fix small memory leak.

2007-09-20 [paul]	0.15.0cvs1

	* po/it.po
		updated by Andrea Spadaccini

2007-09-03 [paul]	0.15.0

	0.15 released

2007-09-03 [paul]	0.14.0cvs11

	* po/ca.po
	* po/es.po
	* po/fi.po
	* po/hu.po
	* po/sk.po
	* po/zh_CN.po
		updated by Miquel Oliete, Ricardo Mones Lastra,
		Flammie Pirinen, Pader Rezso, Andrej Kacian,
		Ralph Young

2007-08-30 [colin]	0.14.0cvs10

	* src/feed.c
	* src/rssyl_cb_menu.c
		Fix all potential misuses of format string functions

2007-08-27 [colin]	0.14.0cvs9

	* src/plugin.c
	* src/rssyl_cb_menu.c
		Fix loss of subfolders properties when renaming folder

2007-08-26 [wwp]	0.14.0cvs8

	* src/feed.c
	* src/rssyl_cb_menu.c
		Use g_markup_printf_escaped() to avoid pango confusion
		with possible tags in strings, when calling alertpanel
		functions.

2007-08-17 [colin]	0.14.0cvs7

	* src/parsers.c
		Fix duplicates on RSS (caused by previous
		commit)

2007-08-17 [colin]	0.14.0cvs6

	* src/parsers.c
		Use <guid> as <link> if there's no <link> and isPermaLink
		isn't false in RSS items.

2007-08-16 [paul]	0.14.0cvs5

	* configure.ac
		use pkgconfig to check for gtk and glib

2007-07-11 [colin]	0.14.0cvs4

	* src/plugin.c
		Specify license better (GPL2+)

2007-07-07 [paul]	0.14.0cvs3

	* po/fi.po