@@ -103,3 +103,4 @@
 ( cvs diff -u -r 1.1.2.80 -r 1.1.2.81 src/feed.c;  cvs diff -u -r 1.1.2.19 -r 1.1.2.20 src/feed.h;  cvs diff -u -r 1.1.2.19 -r 1.1.2.20 src/parsers.c;  ) > 0.15.0cvs5.patchset
 ( cvs diff -u -r 1.1.2.161 -r 1.1.2.162 configure.ac;  ) > 0.15.0cvs6.patchset
 ( cvs diff -u -r 1.1.2.81 -r 1.1.2.82 src/feed.c;  ) > 0.15.0cvs7.patchset
+( cvs diff -u -r 1.1.2.82 -r 1.1.2.83 src/feed.c;  cvs diff -u -r 1.1.2.6 -r 1.1.2.7 src/rssyl_prefs.c;  ) > 0.15.0cvs8.patchset
