@@ -188,8 +188,11 @@ static void save_rssyl_prefs(PrefsPage *page)
 		return;
 	}
 
-	fprintf(pref_file->fp, "\n");
-	prefs_file_close(pref_file);
+        if (fprintf(pref_file->fp, "\n") < 0) {
+		FILE_OP_ERROR(rc_file_path, "fprintf");
+		prefs_file_close_revert(pref_file);
+	} else
+	        prefs_file_close(pref_file);
 }
 
 RSSylPrefs *rssyl_prefs_get(void)
